<resources>
    <string name="app_name">Frozzen List</string>
    <string name="regristrieren">Regristrieren</string>
    <string name="abbruch">Abbruch</string>
    <string name="registrieren">Registrieren</string>
    <string name="anmelden">Anmelden</string>
    <string name="name">Name</string>
    <string name="hint_mail">E-Mail</string>
    <string name="hint_passwort">passwort</string>
    <string name="einloggen">Einloggen</string>
    <string name="Faecher_anzahl">Fächeranzahl eingeben</string>
    <string name="gefriertruhe_beitreten">Gefriertruhe beitreten</string>
    <string name="gefriertruhe_hinzufuegen">Gefriertruhe hinzufügen</string>
    <string name="zurueck">zurück</string>
    <string name="textview">TextView</string>
    <string name="anzeige">Fachanzahl Gefriertruhe</string>
    <string name="freezerAdd">Tiefkühltruhe hinzufügen</string>
    <string name="hier_kannst_du_eine_neue_gefriertruhe_hinzufuegen">Hier kannst du eine neue Gefriertruhe hinzufügen</string>
    <string name="anzahl_der_f_cher">Anzahl der Fächer</string>
    <string name="hinzuf_gen">Hinzufügen</string>
    <string name="test">Du hast bereits eine Gefriertruhe? Dann drücke den Button beitreten</string>
    <string name="remvove">Löschen</string>
    <string name="fach_id_hinzufuegen">Fach ID hinzufügen</string>
    <string name="ausw_hlen">auswählen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_sign_in">email</string>
    <string name="action_register">Regristrieren</string>
    <string name="prompt_email">E-mail eingeben</string>
    <string name="prompt_password">Passwort eingeben</string>
    <string name="action_sign_in_short">Einloggen</string>


</resources>